# lzham_codec

./: .gitignore  lzham.sln
example1/: example1.vcxproj
example2/: example2.vcxproj
example3/: example3.vcxproj
example4/: example4.vcxproj
lib/x64/: lzham_x64.exp  lzham_x64.lib  lzham_x64D.exp  lzham_x64D.lib  lzhamcomp_x64.lib  lzhamdecomp_x64.lib  lzhamlib_x64.lib
lib/x64D/: lzhamcomp_x64D.idb  lzhamcomp_x64D.lib  lzhamdecomp_x64D.idb  lzhamdecomp_x64D.lib  lzhamlib_x64D.idb  lzhamlib_x64D.lib
lib/x86/: lzham_x86.exp  lzham_x86.lib  lzham_x86D.exp  lzham_x86D.lib  lzhamcomp_x86.lib  lzhamdecomp_x86.lib  lzhamlib_x86.lib
lib/x86D/: lzhamcomp_x86D.idb  lzhamcomp_x86D.lib  lzhamdecomp_x86D.idb  lzhamdecomp_x86D.lib  lzhamlib_x86D.idb  lzhamlib_x86D.lib
lzham_api/: CMakeLists.txt  api.cpp  configure.sh  framework.h  lzham_api.vcxproj
lzhamcomp/: lzhamcomp.vcxproj
lzhamdecomp/: lzham_core.h  lzhamdecomp.vcxproj
lzhamdll/: lzham.vcxproj
lzhamlib/: lzhamlib.vcxproj
lzhamtest/: lzhamtest.vcxproj
